[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/components/Banner_Pig.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/Path_Finder.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/models/pig.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 2.0
height = 6.0

[node name="Banner_Pig" type="KinematicBody"]
input_ray_pickable = false
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0 )
shape = SubResource( 1 )

[node name="Search_Timer" type="Timer" parent="."]
autostart = true

[node name="Path_Finder" parent="." instance=ExtResource( 5 )]

[node name="pig" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="Search_Timer" to="." method="_on_Search_Timer_timeout"]
